--- a/rtmpserver/package.json
+++ b/rtmpserver/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "rtmpserver",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "node-media-server": "^2.2.4"
-  }
+	"name": "rtmpserver",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"node-media-server": "^2.2.4"
+	}
 }
